--- a/part0/0.6
+++ b/part0/0.6
@@ -2,7 +2,7 @@ sequenceDiagram
     participant browser
     participant server
 
-    participant->>server: GET https://studies.cs.helsinki.fi/exampleapp/new_note_spa
+    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/new_note_spa
     activate server
     server-->>browser: JSON file
     deactivate server
